feat: user can get transaction by id
