# api/transaction/controller.go
@@ -106,6 +106,37 @@ func (controller *Controller) UsersGetAll(c echo.Context) (err error) {
 	return c.JSON(http.StatusCreated, datas)
 }
 
+// UsersGetById godoc
+// @Summary Get all transaction from specific user
+// @Description  Get all transaction from specific user
+// @Param id   path  string  true  "user ID" minLength:"32"
+// @Param transaction_id   path  string  true  "transaction ID" minLength:"32"
+// @Tags         users
+// @Produce      json
+// @Success      200  {array}  dto.ClientTransactionsResponse
+// @Failure      400  {object}  response.BasicTransactionResponse
+// @Failure      403  {object}  response.BasicTransactionResponse
+// @Failure      500  {object}  response.BasicTransactionResponse
+// @Security ApiKeyAuth
+// @Router       /v1/users/:id/transactions/:transaction_id [get]
+func (controller *Controller) UsersGetById(c echo.Context) (err error) {
+	log.Print("enter controller.transaction.UsersGetAll")
+	id := c.Param("id")
+	tid := c.Param("transactions_id")
+	if id != c.Get("payload").(string) {
+		err = errors.New("Tidak berizin")
+		return
+	}
+	data, err := controller.service.UsersGetById(id, tid)
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, response.BasicTransactionResponse{
+			Status:  "fail",
+			Message: err.Error(),
+		})
+	}
+	return c.JSON(http.StatusCreated, data)
+}
+
 // GetById Godoc
 // @Summary Get transaction
 // @Description  Get transaction transaction by id
